<resources>
    <string name="app_name">SoundCloudPlayer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="client_id">a09c7db0f83a5b19c3435543291fdf69</string>
    <string name="prefix_query_client_id">\?client_id=</string>
    <string name="play">"Play "</string>
    <string name="player_stop">Stop</string>
    <string name="like">Add to my collection</string>
    <string name="add_to_play_list">Add to play list</string>
    <string name="share">Share</string>
    <string name="refresh_tracks">Refresh trackList</string>
    <string name="menu_test_item_1">menu_test_item_1</string>
    <string name="menu_test_item_2">menu_test_item_2</string>
    <string name="login">Sign up</string>
    <string name="sign_up">Sign up</string>
    <string name="action_refresh_tracks">Refresh</string>
    <string name="input_login">Your email address</string>
    <string name="input_password">Your  password</string>
    <string name="signIn">Connect</string>
    <string name="signUp">Sign up</string>
    <string name="set_error_valid_email">Input valid email</string>
    <string name="error_min_chars">Min char is 6</string>
    <string name="title_activity_logged_user">LoggedUserActivity</string>
    <string name="user_log_out">Logout</string>
    <string name="internet_connected_failed">Internet connected failed.</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="like_tracks">My Collection</string>
    <string name="playlists">Playlists</string>
    <string name="search">Search</string>
    <string name="loading_connect_page">Please wait while signing in</string>
    <string name="charts">Charts</string>
    <string name="description_is_empty">Description is empty</string>
    <string name="user_name_track">"User name: "</string>
    <string name="added_to_collection">Added to Collection</string>
    <string name="failed_added">Failed added</string>
    <string name="track_deleted">track deleted</string>
    <string name="refresh_page">Refresh page</string>
    <string name="refresh_ok">Refresh OK!</string>
    <string name="all_music">All music</string>
    <string name="alternative_rock">Alternative rock</string>
    <string name="ambient">Ambient</string>
    <string name="classical">Classical</string>
    <string name="country">Country</string>
    <string name="danceedm"><![CDATA[Dance & EDM]]></string>
    <string name="dancehall">Dancehall</string>
    <string name="deephouse">Deephouse</string>
    <string name="disco">Disco</string>
    <string name="drumbass">Drumbass</string>
    <string name="dubstep">Dubstep</string>
    <string name="electronic">Electronic</string>
    <string name="folksingersongwriter">Folk</string>
    <string name="hiphop_rap">Hip-hop and Rap</string>
    <string name="house">House</string>
    <string name="indie">Indie</string>
    <string name="jazz_blues">Jazz and Blues</string>
    <string name="latin">Latin</string>
    <string name="metal">Metal</string>
    <string name="piano">Piano</string>
    <string name="pop">Pop</string>
    <string name="rnb_soul"><![CDATA[R&B & Soul]]></string>
    <string name="reggae">Reggae</string>
    <string name="reggaeton">Reggaeton</string>
    <string name="rock">Rock</string>
    <string name="soundtrack">Soundtrack</string>
    <string name="techno">Techno</string>
    <string name="trance">Trance</string>
    <string name="trap">Trap</string>
    <string name="triphop">Triphop</string>
    <string name="world">World</string>
    <string name="enter_playlist_title">Enter playlist title</string>
    <string name="public_playlist">Public playlist</string>
    <string name="private_playlist">Private playlist</string>
    <string name="create_playlist">Create playlist</string>
    <string name="create">Create</string>
    <string name="enter_valid_title">Please enter valid title</string>
    <string name="playlist_created">Playlist created</string>
    <string name="add_new_playlist">Add new playlist</string>
    <string name="are_you_sure_delete">Are you sure delete?</string>
    <string name="title_playlist">Title playlist</string>
    <string name="count_playlist_s_tracks">Count playlist\'s tracks:</string>
    <string name="count">0</string>
    <string name="search_soundcloud">Search SoundCloud</string>
    <string name="clear_search">Clear</string>
    <string name="search_sound_cloud">Search SoundCloud</string>
    <string name="title_station">Title station</string>
    <string name="add_station_to_playlist">Add station to playlist</string>
    <string name="play_station">Play station</string>
    <string name="stations">Stations</string>


</resources>
