<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".ui.activity.MainActivity">

    <item
        android:id="@+id/action_sign_up"
        android:orderInCategory="100"
        android:title="@string/sign_up"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_alternative_rock"
        android:orderInCategory="100"
        android:title="@string/alternative_rock"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_ambient"
        android:orderInCategory="100"
        android:title="@string/ambient"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_classical"
        android:orderInCategory="100"
        android:title="@string/classical"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_country"
        android:orderInCategory="100"
        android:title="@string/country"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_danceedm"
        android:orderInCategory="100"
        android:title="@string/danceedm"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_dancehall"
        android:orderInCategory="100"
        android:title="@string/dancehall"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_deephouse"
        android:orderInCategory="100"
        android:title="@string/deephouse"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_disco"
        android:orderInCategory="100"
        android:title="@string/disco"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_drumbass"
        android:orderInCategory="100"
        android:title="@string/drumbass"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_dubstep"
        android:orderInCategory="100"
        android:title="@string/dubstep"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_electronic"
        android:orderInCategory="100"
        android:title="@string/electronic"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_folksingersongwriter"
        android:orderInCategory="100"
        android:title="@string/folksingersongwriter"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_hiphoprap"
        android:orderInCategory="100"
        android:title="@string/hiphop_rap"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_house"
        android:orderInCategory="100"
        android:title="@string/house"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_indie"
        android:orderInCategory="100"
        android:title="@string/indie"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_jazz_blues"
        android:orderInCategory="100"
        android:title="@string/jazz_blues"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_latin"
        android:orderInCategory="100"
        android:title="@string/latin"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_metal"
        android:orderInCategory="100"
        android:title="@string/metal"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_piano"
        android:orderInCategory="100"
        android:title="@string/piano"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_pop"
        android:orderInCategory="100"
        android:title="@string/pop"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_rbsoul"
        android:orderInCategory="100"
        android:title="@string/rnb_soul"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_reggae"
        android:orderInCategory="100"
        android:title="@string/reggae"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_reggaeton"
        android:orderInCategory="100"
        android:title="@string/reggaeton"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_rock"
        android:orderInCategory="100"
        android:title="@string/rock"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_soundtrack"
        android:orderInCategory="100"
        android:title="@string/soundtrack"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_techno"
        android:orderInCategory="100"
        android:title="@string/techno"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_trance"
        android:orderInCategory="100"
        android:title="@string/trance"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_trap"
        android:orderInCategory="100"
        android:title="@string/trap"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_triphop"
        android:orderInCategory="100"
        android:title="@string/triphop"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_world"
        android:orderInCategory="100"
        android:title="@string/world"
        app:showAsAction="never"/>

</menu>
