<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <EditText
        android:id="@+id/enter_playlist_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_playlist_title"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:padding="16dp"/>


    <RadioGroup
        android:id="@+id/radio_group_select_type_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_playlist_title"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:id="@+id/radioButton_public"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="true"
            android:padding="8dp"
            android:text="@string/public_playlist"
            android:textAppearance="@android:style/TextAppearance.Medium"/>

        <RadioButton
            android:id="@+id/radioButton_private"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:text="@string/private_playlist"
            android:textAppearance="@android:style/TextAppearance.Medium"/>
    </RadioGroup>


</RelativeLayout>