<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">


    <ImageView
        android:id="@+id/logo_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_placeholder"/>

    <TextView
        android:id="@+id/title_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/logo_playlist"
        android:paddingStart="4dp"
        android:text="@string/title_playlist"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <TextView
        android:id="@+id/title_track_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_playlist"
        android:layout_toEndOf="@+id/logo_playlist"
        android:paddingStart="4dp"
        android:text="@string/count_playlist_s_tracks"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <TextView
        android:id="@+id/count_tracks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_playlist"
        android:layout_marginStart="24dp"
        android:layout_toEndOf="@+id/title_track_count"
        android:text="@string/count"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <ImageView
        android:id="@+id/play_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_play"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"/>


</RelativeLayout>